<?xml version="1.0"?>
<package format="2">
  <name>cnr_simple_touch_controller</name>
  <version>0.0.0</version>
  <description>The cnr_simple_touch_controller package</description>

  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>
  <license>BSD</license>

   <author email="paolo.franceschi@stiima.cnr.it">Paolo Franceschi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cnr_controller_interface</depend>
  <depend>controller_interface    </depend>
  <depend>geometry_msgs           </depend>
  <depend>cnr_hardware_interface  </depend>
  <depend>roscpp                  </depend>
  <depend>rosdyn_core             </depend>

  <depend>subscription_notifier       </depend>
  <depend>actionlib                   </depend>
  <depend>simple_touch_controller_msgs</depend>
  <depend>actionlib_msgs              </depend>
  <depend>tf_conversions              </depend>
  
                                                      
  <export>
  <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
